# egm

./: LICENSE  README.md  flake.nix  meson.build
.github/workflows/: c-cpp.yml
include/egm/: egm-basic.h  egm.h  id.h  managedPtr.h
include/egm/manager/: abstractElement.h  abstractManager.h  dummyManager.h  manager.h  managerNode.h  managerTypes.h  typeInfo.h
include/egm/policies/: filePersistencePolicy.h  yamlSerializationPolicy.h
include/egm/set/: abstractSet.h  doNothingPolicy.h  indexableSet.h  orderedSet.h  privateSet.h  set.h  singleton.h  wrapperSet.h
include/egm/util/: integerList.h  templateTypeList.h  visitor.h
src/test/: managerTest.cpp  parseCompositeTest.yml  setTest.cpp
